scroll fix bg video

--- a/shared/templates/main.html
+++ b/shared/templates/main.html
@@ -15,17 +15,14 @@
         <div class="hero bg-video-container" >
             <video id='hero' playsinline autoplay loop muted src="<%= path %>/video/{{videos.hero.file}}.mp4"></video>
             <div class="block">
-                <h1>lorem Laboris excepteur nostrud.</h1>
+                <h1>
+                <span>
+                    Equal access to eye care: the power of a pair of glasses to transform lives
+                </span>
+            </h1>
                 
                 <div id="headline">
-                    <ul>
-                        <li>
-                            Equal access to eye care: the power of a pair of glasses to transform lives
-                        </li>
-                        <li>
-                            World-class vision: imagine a world with perfect sight
-                        </li>
-                    </ul>
+
                 </div>
             </div>
         </div>
@@ -35,8 +32,8 @@
 </div>
 
 <section class="chapter-1">
-    <div class="frame article-1 bg-video-container">
-        <video playsinline autoplay loop muted src="<%= path %>/video/ipswich.mp4"></video>
+    <div class="frame article-1 bg-video-container fix-on-view">
+        <video class='fix' playsinline autoplay loop muted src="<%= path %>/video/ipswich.mp4"></video>
         <article class="grid-container fluid position-relative">
         
             <div class="grid-x align-center">
@@ -183,8 +180,8 @@
 </section>
 
 <section class="chapter-2">
-    <div class="frame article-1 bg-video-container">
-        <video playsinline autoplay loop muted src="<%= path %>/video/rozelle.mp4"></video>
+    <div class="frame article-1 bg-video-container fix-on-view">
+        <video class="fix" playsinline autoplay loop muted src="<%= path %>/video/rozelle.mp4"></video>
         <article class="grid-container fluid position-relative">
         
             <div class="grid-x align-center">
