--- a/shared/css/opsm.scss
+++ b/shared/css/opsm.scss
@@ -42,6 +42,9 @@ body {
     list-style: none;
     margin: 0;
 }
+.pin {
+    position: fixed !important;
+}
 
 .frame {
     padding: 2rem;
@@ -90,9 +93,10 @@ video {
 
 #Header {
     background-color: $c-orange;
-    .hero {
-        height: calc(80vh - 10rem);
-    }
+    // .hero {
+    //     height: calc(80vh - 10rem);
+
+    // }
 }
 
 .brand-bar {
@@ -105,13 +109,23 @@ video {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    // height: 100%;
+    height: calc(80vh - 10rem);
     background-size: cover;
     background-position: 50% 30%;
     background-image: url(/assets/images/hero.png);
-    .block {
-        width: 60%;
+
+
+    @include breakpoint(medium) {
+
+        h1 {
+            font-size: 2rem;
+        }
+        .block {
+            width: 60%;
+        }
     }
+
 
     h1 {
         padding: 2rem;
@@ -204,5 +218,10 @@ footer {
         height: 100%;
         width: 100%;
     }
+}
+
+video.fix {
+    width: 100vw;
+    height: 100vh;
 }
 
