--- a/shared/css/opsm.scss
+++ b/shared/css/opsm.scss
@@ -113,7 +113,7 @@ video {
     height: calc(80vh - 10rem);
     background-size: cover;
     background-position: 50% 30%;
-    background-image: url(/assets/images/hero.png);
+    background-image: url("<%= path %>/images/hero.png");
 
 
     @include breakpoint(medium) {
@@ -135,7 +135,7 @@ video {
 
 .chapter-1 {
     .article-1 {
-        background: url(/assets/images/ch1_bg.jpg) no-repeat 50%;
+        background: url("<%= path %>/images/ch1_bg.jpg") no-repeat 50%;
         background-size: 150%;
     }
 
@@ -166,7 +166,7 @@ video {
     }
 
     .article-2 {
-        background: url(/assets/images/ch1_bg2.jpg) no-repeat 70% 50%;
+        background: url("<%= path %>/images/ch1_bg2.jpg") no-repeat 70% 50%;
         background-size: cover;
     }
 }
@@ -175,18 +175,18 @@ video {
 
 .chapter-2 {
     .article-1 {
-        background: url(/assets/images/ch2_section1_bg.jpg) no-repeat 50%;
+        background: url("<%= path %>/images/ch2_section1_bg.jpg") no-repeat 50%;
         background-size: cover;
     }
 
     .article-2 {
-        background: url(/assets/images/ch2_section2_bg.jpg) no-repeat 70% 50%;
+        background: url("<%= path %>/images/ch2_section2_bg.jpg") no-repeat 70% 50%;
         background-size: cover;
     }
 }
 
 .steps {
-    background: linear-gradient(transparent 30%, black 70%), url(/assets/images/steps_bg.jpg) no-repeat 50% 0;
+    background: linear-gradient(transparent 30%, black 70%), url("<%= path %>/images/steps_bg.jpg") no-repeat 50% 0;
     background-size: 100%;
 }
 
