--- a/shared/templates/main.html
+++ b/shared/templates/main.html
@@ -14,15 +14,16 @@
     <div class="frame text-center padding-top-0">
         <div class="hero bg-video-container" >
             <video id='hero' playsinline autoplay loop muted src="<%= path %>/video/{{videos.hero.file}}.mp4"></video>
-            <div class="block">
+            <div id="headline" class="block">
                 <h1>
                 <span>
                     Equal access to eye care: the power of a pair of glasses to transform lives
                 </span>
             </h1>
                 
-                <div id="headline">
-
+                <div id="standfirst">
+                    <p>Globally, one in seven people don’t have access to proper eye healthcare. Together, OPSM and its charity partner OneSight are aiming to change this.
+                    </p>
                 </div>
             </div>
         </div>
