--- a/shared/css/opsm.scss
+++ b/shared/css/opsm.scss
@@ -26,6 +26,12 @@ h1, h2, h3, h4 {
 }
 body {
     color: black;
+    line-height: 1.6;
+    font-size: 1.3rem;
+}
+
+p {
+    padding-top: 1rem;
 }
 .hr {
     height: 2px;
@@ -123,6 +129,16 @@ video {
         }
         .block {
             width: 60%;
+        }
+    }
+
+    @include breakpoint(large) {
+
+        h1 {
+            font-size: 3rem;
+        }        
+        .block {
+            width: 30%;
         }
     }
 
