--- a/shared/css/opsm.scss
+++ b/shared/css/opsm.scss
@@ -230,7 +230,7 @@ video {
     }
 
     .article-2 {
-        background: url("<%= path %>/images/ch1_bg2.jpg") no-repeat 70% 50%;
+        // background: url("<%= path %>/images/ch1_bg2.jpg") no-repeat 70% 50%;
         background-size: cover;
     }
 }
@@ -239,7 +239,7 @@ video {
 
 .chapter-2 {
     .article-1 {
-        background: url("<%= path %>/images/ch2_section1_bg.jpg") no-repeat 50%;
+        // background: url("<%= path %>/images/ch2_section1_bg.jpg") no-repeat 50%;
         background-size: cover;
     }
 
@@ -253,7 +253,7 @@ video {
     position: relative;
     .fix {
         position: absolute;
-        background: linear-gradient(transparent 30%, black 70%), url("<%= path %>/images/steps_bg.jpg") no-repeat 50% 0;
+        background: url("<%= path %>/images/steps_bg.jpg") no-repeat 50% 0;
         background-size: 100%;
         width: 100vw;
         height: 100vh;
@@ -303,4 +303,21 @@ video.fix {
 
 img {
     max-width: 100%;
+}
+
+#social {
+    display: flex;
+    justify-content: center;
+
+    li {
+        display: inline-block;
+        padding-right: 5px;
+    }
+}
+
+.quad-hr {
+    padding-top: 2rem;
+    .hr {
+        margin: 2px 0;
+    }
 }
