--- a/shared/templates/main.html
+++ b/shared/templates/main.html
@@ -13,7 +13,9 @@
     </div>
     <div class="frame text-center padding-top-0">
         <div class="hero bg-video-container" >
-            <video id='hero' playsinline autoplay loop muted src="<%= path %>/video/{{videos.hero.file}}.mp4"></video>
+            {{#with videos.hero}}
+            <video id={{key}} playsinline autoplay loop muted src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg"></video>
+            {{/with}}
             <div id="headline" class="block">
                 <h1>
                     {{&sheets.global[0].headline}}
@@ -39,7 +41,9 @@
 
 <section class="chapter-1">
     <div class="frame article-1 bg-video-container fix-on-view">
-        <video class='fix' playsinline autoplay loop muted src="<%= path %>/video/ipswich.mp4"></video>
+        {{#with videos.ch1bg}}
+        <video class='fix' id={{key}} playsinline autoplay loop muted src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg"></video>
+        {{/with}}
         <article class="grid-container fluid position-relative">
         
             <div class="grid-x align-center">
@@ -83,7 +87,7 @@
                     <btnPlay key='{{key}}' playing="{{playing}}" on-click="videotoggle" />
                     <btnMute key="{{key}}" muted="{{active.muted}}" />
                 </nav>
-                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4">
+                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
                     {{#if subs}}
                     <track label="English" kind="subtitles" srclang="en" src="<%= path %>/video/{{subs}}">
                     {{/if}}
@@ -110,7 +114,7 @@
                     <btnPlay key='{{key}}' playing="{{playing}}" on-click="videotoggle" />
                     <btnMute key="{{key}}" muted="{{active.muted}}" />
                 </nav>
-                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4">
+                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
                     {{#if subs}}
                     <track label="English" kind="subtitles" srclang="en" src="<%= path %>/video/{{subs}}">
                     {{/if}}
@@ -130,25 +134,25 @@
                     <li>
                         {{&sheets.chapter1[0].step1}}
                         {{#with videos.step1}}
-                        <video id="{{key}}" class="{{#if scrollPlay}}scroll-play{{/if}}" loop playsinline {{#if muted}}muted{{/if}} src="<%= path %>/video/{{file}}.mp4"></video>
+                        <video id="{{key}}" class="{{#if scrollPlay}}scroll-play{{/if}}" loop playsinline {{#if muted}}muted{{/if}} src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg"></video>
                         {{/with}}
                     </li>
                     <li>
                         {{&sheets.chapter1[0].step2}}
                         {{#with videos.step2}}
-                        <video id="{{key}}" class="{{#if scrollPlay}}scroll-play{{/if}}" loop playsinline {{#if muted}}muted{{/if}} src="<%= path %>/video/{{file}}.mp4"></video>
+                        <video id="{{key}}" class="{{#if scrollPlay}}scroll-play{{/if}}" loop playsinline {{#if muted}}muted{{/if}} src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg"></video>
                         {{/with}}
                     </li>
                     <li>
                         {{&sheets.chapter1[0].step3}}
                         {{#with videos.step3}}
-                        <video id="{{key}}" class="{{#if scrollPlay}}scroll-play{{/if}}" loop playsinline {{#if muted}}muted{{/if}} src="<%= path %>/video/{{file}}.mp4"></video>
+                        <video id="{{key}}" class="{{#if scrollPlay}}scroll-play{{/if}}" loop playsinline {{#if muted}}muted{{/if}} src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg"></video>
                         {{/with}}
                     </li>
                     <li>
                         {{&sheets.chapter1[0].step4}}
                         {{#with videos.step4}}
-                        <video id="{{key}}" class="{{#if scrollPlay}}scroll-play{{/if}}" loop playsinline {{#if muted}}muted{{/if}} src="<%= path %>/video/{{file}}.mp4"></video>
+                        <video id="{{key}}" class="{{#if scrollPlay}}scroll-play{{/if}}" loop playsinline {{#if muted}}muted{{/if}} src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg"></video>
                         {{/with}}
                     </li>
                 </ul>
@@ -166,7 +170,7 @@
                     <btnPlay key='{{key}}' playing="{{playing}}" on-click="videotoggle" />
                     <btnMute key="{{key}}" muted="{{active.muted}}" />
                 </nav>
-                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4">
+                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
                     {{#if subs}}
                     <track label="English" kind="subtitles" srclang="en" src="<%= path %>/video/{{subs}}">
                     {{/if}}
@@ -177,7 +181,9 @@
     </article>
     
     <article class="frame article-2 bg-video-container fix-on-view">
-        <video class='fix' playsinline autoplay loop muted src="<%= path %>/video/children_playing.mp4"></video>
+        {{#with videos.ch1outrobg}}
+        <video class='fix' id={{key}} playsinline autoplay loop muted src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg"></video>
+        {{/with}}
         <div class="grid-x align-center position-relative">
             <div class="column medium-6 large-6">
                 <div class="outro">
@@ -191,7 +197,9 @@
 
 <section class="chapter-2">
     <div class="frame article-1 bg-video-container fix-on-view">
-        <video class="fix" playsinline autoplay loop muted src="<%= path %>/video/rozelle.mp4"></video>
+        {{#with videos.ch2bg}}
+        <video class='fix' id={{key}} playsinline autoplay loop muted src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg"></video>
+        {{/with}}
         <article class="grid-container fluid position-relative">
         
             <div class="grid-x align-center">
@@ -237,7 +245,7 @@
                     <btnPlay key='{{key}}' playing="{{playing}}" on-click="videotoggle" />
                     <btnMute key="{{key}}" muted="{{active.muted}}" />
                 </nav>
-                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4">
+                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
                     {{#if subs}}
                     <track label="English" kind="subtitles" srclang="en" src="<%= path %>/video/{{subs}}">
                     {{/if}}
@@ -248,7 +256,9 @@
     </article>
 
     <article class="frame article-2 bg-video-container fix-on-view">
-        <video class='fix' playsinline autoplay loop muted src="<%= path %>/video/school.mp4"></video>
+        {{#with videos.ch2outrobg}}
+        <video class='fix' id={{key}} playsinline autoplay loop muted src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg"></video>
+        {{/with}}
         <div class="grid-x align-center position-relative">
             <div class="column medium-8 large-6">
                 <div class="outro">
@@ -265,7 +275,16 @@
             <div class="column medium-8 large-6">
                 {{&sheets.global[0].cta}}
             </div>
-        </div>        
+        </div>
+        <div class="grid-container quad-hr">
+            <div class="hr"></div>
+            <div class="hr"></div>
+            <div class="hr"></div>
+            <div class="hr"></div>
+        </div>
+        <div class="frame padding-bottom-0">
+            <div id="social"></div>
+        </div>
     </div>
     <div class="hr"></div>
     <div class="frame">
