--- a/shared/templates/main.html
+++ b/shared/templates/main.html
@@ -87,7 +87,7 @@
                     <btnPlay key='{{key}}' playing="{{playing}}" on-click="videotoggle" />
                     <btnMute key="{{key}}" muted="{{active.muted}}" />
                 </nav>
-                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
+                <video id="{{key}}" class="shaka scroll-play" playsinline poster="<%= path %>/video/poster/{{file}}.jpg">
                     {{#if subs}}
                     <track label="English" kind="subtitles" srclang="en" src="<%= path %>/video/{{subs}}">
                     {{/if}}
@@ -114,7 +114,7 @@
                     <btnPlay key='{{key}}' playing="{{playing}}" on-click="videotoggle" />
                     <btnMute key="{{key}}" muted="{{active.muted}}" />
                 </nav>
-                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
+                <video id="{{key}}" class="shaka scroll-play" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
                     {{#if subs}}
                     <track label="English" kind="subtitles" srclang="en" src="<%= path %>/video/{{subs}}">
                     {{/if}}
@@ -170,7 +170,7 @@
                     <btnPlay key='{{key}}' playing="{{playing}}" on-click="videotoggle" />
                     <btnMute key="{{key}}" muted="{{active.muted}}" />
                 </nav>
-                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
+                <video id="{{key}}" class="shaka scroll-play" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
                     {{#if subs}}
                     <track label="English" kind="subtitles" srclang="en" src="<%= path %>/video/{{subs}}">
                     {{/if}}
@@ -245,7 +245,7 @@
                     <btnPlay key='{{key}}' playing="{{playing}}" on-click="videotoggle" />
                     <btnMute key="{{key}}" muted="{{active.muted}}" />
                 </nav>
-                <video id="{{key}}" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
+                <video id="{{key}}" class="shaka scroll-play" playsinline src="<%= path %>/video/{{file}}.mp4" poster="<%= path %>/video/poster/{{file}}.jpg">
                     {{#if subs}}
                     <track label="English" kind="subtitles" srclang="en" src="<%= path %>/video/{{subs}}">
                     {{/if}}
@@ -290,14 +290,13 @@
     <div class="frame">
         <div class="">
             <div class="grid-container">
-                <h2 class="padding-bottom-1">Related content</h2>
+                <h2 class="padding-bottom-1">{{&sheets.global[0].relatedContentTitle}}</h2>
                 <ul class="list-unstyled related-content">
+                    {{#each sheets.related}}
                     <li>
-                        Proident do quis officia mollit mollit in nisi.
+                        <a href="{{link}}" target="_blank">{{&label}}</a>
                     </li>
-                    <li>
-                        Adipisicing elit ad cupidatat sint ex excepteur duis consequat duis.
-                    </li>
+                    {{/each}}
                 </ul>
                 <div class="text-center padding-vertical-2">
                     {{&sheets.global[0].credits}}
