updated to dynamic media path

--- a/atoms/default/client/css/main.scss
+++ b/atoms/default/client/css/main.scss
@@ -1,12 +1,12 @@
-@import "mq";
+// @import "mq";
 @import "fonts";
-@import "palette";
+// @import "palette";
 @import "interactive";
-@import "nav";
-@import "video";
-@import "progress";
-@import "skip";
-@import "action";
+// @import "nav";
+// @import "video";
+// @import "progress";
+// @import "skip";
+// @import "action";
 @import "opsm";
 
 .element-atom,
