--- a/atoms/default/server/templates/main.html
+++ b/atoms/default/server/templates/main.html
@@ -1,3 +1,30 @@
+<!DOCTYPE html>
+<html id="js-context" class="js-off is-not-modern id--signed-out" lang="en" style="padding:0; margin: 0;">
+<head>
+<title>OPSM: Life in focus</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
+<meta name="format-detection" content="telephone=no"/>
+<meta name="HandheldFriendly" content="True"/>
+<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+
+<style>
+figure {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+</style>
+<link rel="stylesheet" type="text/css" href="main.css" />
+</head>
+<body style="padding:0; margin: 0;" class="is-immersive is-immersive-interactive">
+<figure class="element element-atom">
+<figure class="interactive interactive-atom">
+
+    
+
 <script id="btnPlay" type="text/ractive">
     <button class="btn-play" on-click="videotoggle">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -91,3 +118,8 @@
     </div>
 
 </div>
+</figure>
+</figure>
+<script src="app.js" type="text/javascript"></script>
+</body>
+</html>
