--- a/shared/css/opsm.scss
+++ b/shared/css/opsm.scss
@@ -90,6 +90,7 @@ p {
 .list-unstyled {
     list-style: none;
     margin: 0;
+    padding: 0;
 }
 .pin {
     position: fixed !important;
@@ -172,6 +173,7 @@ video {
 }
 
 .hero {
+    position: relative;
     background-color: black;
     text-align: center;
     display: flex;
@@ -183,6 +185,10 @@ video {
     background-size: cover;
     background-position: 50% 30%;
     // background-image: url("<%= path %>/images/hero.png");
+
+    #headline {
+        position: relative;
+    }
 
     h1 {
         font-size: 2.5rem;
