--- a/shared/templates/main.html
+++ b/shared/templates/main.html
@@ -98,7 +98,7 @@
         </div>
     </article>
 
-    <article class="frame bright scroll-play-video">
+    <article class="frame bright scroll-play-video padding-top-0">
         <!-- <div class="grid-x align-center">
             <div class="column medium-6 large-6">
                 <header class="interview2-heading">
@@ -125,7 +125,7 @@
     </article>
     
     <div class="frame steps fix-on-view">
-        <div class="fix"></div>
+        <div class="fix" style="background-image: url({{assetsPath}}/images/steps_bg.jpg);"></div>
         <div class="grid-x align-center position-relative">
             <div class="column">
                 <h2 class="text-center">{{&sheets.chapter1[0].stepsHeading}}</h2>
