logo, bg colour update

--- a/shared/templates/main.html
+++ b/shared/templates/main.html
@@ -5,9 +5,9 @@
         <div class="brand-bar">
             <div class="grid-x align-justify text-center medium-text-left">
                 <div class="cell medium-order-2 medium-shrink">
-                    <a href="{{sheets.global[0].logoCta}}" target="_blank"><img class="display-inline" src="{{assetsPath}}/brand.svg" alt="{{sheets.global[0].Header}}" /></a>
+                    <a href="{{sheets.global[0].logoCta}}" target="_blank"><img class="display-inline" class="brand" src="{{assetsPath}}/brand.svg" alt="{{sheets.global[0].Header}}" /></a>
                 </div>
-                <div class="cell medium-auto medium-order-1">{{&sheets.global[0].tag}}</div>
+                <div class="cell medium-auto medium-order-1 flex-container align-middle">{{&sheets.global[0].tag}}</div>
             </div>
         </div>
     </div>
