--- a/atoms/default/server/templates/main.html
+++ b/atoms/default/server/templates/main.html
@@ -120,6 +120,6 @@ figure {
 </div>
 </figure>
 </figure>
-<script src="app.js" type="text/javascript"></script>
+<script src="main.js" type="text/javascript"></script>
 </body>
 </html>
