--- a/shared/css/opsm.scss
+++ b/shared/css/opsm.scss
@@ -169,6 +169,17 @@ video {
     .brand {
         width: 120px;
     }
+    .tag {
+        padding-top: 1rem;
+        @include breakpoint(medium) {
+            padding-top: 0;
+            display: flex;
+            justify-items: center;
+            align-items: center;
+            height: 100%;
+        }
+    }
+
 }
 
 .brand-bar {
@@ -189,11 +200,17 @@ video {
     background-position: 50% 30%;
     // background-image: url("<%= path %>/images/hero.png");
 
+    #hero {
+        opacity: 0.6;
+    }
     #headline {
         position: relative;
     }
 
     h1 {
+        font-family: "Guardian Headline Full";
+        font-weight: 600;
+        text-shadow: 0px 2px 0px rgba(0,0,0,0.3);
         font-size: 2.5rem;
         @include breakpoint(medium) {
             font-size: 2.75rem;
@@ -223,7 +240,6 @@ video {
 
 .chapter-1 {
     .article-1 {
-        // background: url("<%= path %>/images/ch1_bg.jpg") no-repeat 50%;
         background-size: 150%;
     }
 
@@ -259,7 +275,6 @@ video {
     }
 
     .article-2 {
-        // background: url("<%= path %>/images/ch1_bg2.jpg") no-repeat 70% 50%;
         background-size: cover;
     }
 }
@@ -268,13 +283,7 @@ video {
 
 .chapter-2 {
     .article-1 {
-        // background: url("<%= path %>/images/ch2_section1_bg.jpg") no-repeat 50%;
         background-size: cover;
-    }
-
-    .article-2 {
-        // background: url("<%= path %>/images/ch2_section2_bg.jpg") no-repeat 70% 50%;
-        // background-size: cover;
     }
 }
 
@@ -304,7 +313,11 @@ footer {
 
 .related-content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    
+    @include breakpoint(medium) {
+        grid-template-columns: 1fr 1fr;
+    }
+
     column-gap: 2rem;
     li {
         margin: 1rem 0;
